--- a/Javascript/javascript01.html
+++ b/Javascript/javascript01.html
@@ -1,38 +1,556 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자바스크립트 :: 데이터 저장하기</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/default.min.css">
 </head>
+
 <body>
-     <header id="header">
+    <header id="header">
         <h1>
-            <a href="index.html">javascript</a>
+            <a href="index.html">Javascript</a>
         </h1>
         <nav>
             <ul>
                 <li><a href="javascript01.html">데이터 저장하기</a></li>
-                <li><a href="javascript02.html">데이터 불러오기</a></li>    
+                <li><a href="javascript02.html">데이터 불러오기</a></li>
                 <li><a href="javascript03.html">데이터 실행하기</a></li>
                 <li><a href="javascript04.html">데이터 제어하기</a></li>
             </ul>
         </nav>
-     </header>
-     <!-- //header -->
+    </header>
+    <!-- //header -->
+    <main id="main">
+        <div class="main__menu container">
+            <ul>
+                <li><a href="#">01. 변수 : 데이터 저장</a></li>
+                <li><a href="#">02. 변수 : 데이터 저장 + 변경</a></li>
+                <li><a href="#">03. 변수 : 데이터 저장 + 변경 + 추가</a></li>
+                <li><a href="#">03. 상수 : 데이터 저장 + 변경(X)</a></li>
+                <li><a href="#">04. 배열 : 데이터 저장(여러개) : 표현방법1</a></li>
+                <li><a href="#">05. 배열 : 데이터 저장(여러개) : 표현방법2</a></li>
+                <li><a href="#">06. 배열 : 데이터 저장(여러개) : 표현방법3</a></li>
+                <li><a href="#">07. 배열 : 데이터 저장(여러개) : 표현방법4</a></li>
+                <li><a href="#">08. 배열 : 데이터 저장(여러개) : 표현방법5</a></li>
+                <li><a href="#">09. 배열 : 데이터 저장(여러개) : 표현방법6</a></li>
+                <li><a href="#">10. 배열 : 데이터 저장(여러개) : 표현방법7</a></li>
+                <li><a href="#">11. 객체 : 데이터 저장(키와값) : 표현방법1</a></li>
+                <li><a href="#">12. 객체 : 데이터 저장(키와값) : 표현방법2</a></li>
+                <li><a href="#">13. 객체 : 데이터 저장(키와값) : 표현방법3</a></li>
+                <li><a href="#">14. 객체 : 데이터 저장(키와값) : 표현방법4</a></li>
+                <li><a href="#">15. 객체 : 데이터 저장(키와값) : 표현방법5</a></li>
+                <li><a href="#">16. 객체 : 데이터 저장(키와값) : 표현방법6</a></li>
+                <li><a href="#">17. 객체 : 데이터 저장(키와값) : 표현방법7</a></li>
+                <li><a href="#">18. 객체 : 데이터 저장(키와값) : 표현방법8</a></li>
+                <li><a href="#">19. 객체 : 데이터 저장(키와값) : 표현방법9</a></li>
+                <li><a href="#">20. 객체 : 데이터 저장(키와값) : 표현방법10</a></li>
+            </ul>
+        </div>
+        <!-- //main__menu container -->
+        <div class="main__sample container">
+            <div id="sample01" class="sample">
+                <h3>01. 변수 : 데이터 저장</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    let x = 100;  // let x = 100; : 여기서 let 키워드를 사용하여 변수 x를 선언하고, 100이라는 숫자 값을 할당합니다.
+    let y = 200;
+    let z = "javascript";
 
-     <main id="main">
+    console.log(x);
+    console.log(y);
+    console.log(z);
+}</code></pre>
+                <p>
+                    let x = 100; : 여기서 let 키워드를 사용하여 변수 x를 선언하고, 100이라는 숫자 값을 할당합니다.
+                </p>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample01 -->
+            <div id="sample02" class="sample">
+                <h3>02. 변수 : 데이터 저장 + 데이터 변경</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    let x = 100;
+    let y = 200;
+    let z = "javascript";
 
-     </main>
-     <!-- //main -->
-        </main>
-     <footer id="footer">
+    x = 300;
+    y = 400;
+    z = "Jquery"
 
-     </footer>
-     <!-- //footer -->
+    console.log(x);
+    console.log(y);
+    console.log(z);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            300<br />
+                            400<br />
+                            Jquery
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample02 -->
+            <div id="sample03" class="sample">
+                <h3>03. 변수 : 상수 : 데이터 저장(변경&추가 X)</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    let x = 100;
+    let y = 200;
+    let z = "javascript";
+
+    x += 300;
+    y += 400;
+    z += "Jquery"
+
+    console.log(x);
+    console.log(y);
+    console.log(z);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            400<br />
+                            600<br />
+                            javascriptJquery
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample03 -->
+            <div id="sample04" class="sample">
+                <h3>04. 변수 : 상수 : 데이터 저장(변경&추가 X) </h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    let x = 100;
+    let y = 200;
+    let z = "javascript";
+
+    // x += 300;
+    // y += 400;
+    // z += "Jquery"
+
+    console.log(x);
+    console.log(y);
+    console.log(z);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample04 -->
+            <div id="sample05" class="sample">
+                <h3>05. 변수 : 상수 : 데이터 저장(변경&추가 X) </h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    const arr = new Array();
+    arr[0] = 100;
+    arr[1] = 200;
+    arr[2] = "javascript";
+
+    console.log("05_____________");
+    console.log(arr[0]);
+    console.log(arr[1]);
+    console.log(arr[2]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample05 -->
+            <div id="sample06" class="sample">
+                <h3>06. 배열 : 데이터 저장(여러개) : 표현방법 2 : 배열선언 + 초기값 설정</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    const arr = new Array(100, 200, "javascript");
+    console.log("06_____________");
+    console.log(arr[0]);
+    console.log(arr[1]);
+    console.log(arr[2]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample06 -->
+            <div id="sample07" class="sample">
+                <h3>07. 배열 : 데이터 저장(여러개) : 표현방법 3 : 리터럴방식 배열선언</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    const arr = [];
+    arr[0] = 100;
+    arr[1] = 200;
+    arr[2] = "javascript";
+    
+    console.log("07_____________");
+    console.log(arr[0]);
+    console.log(arr[1]);
+    console.log(arr[2]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample07 -->
+            <div id="sample08" class="sample">
+                <h3>08. 배열 : 데이터 저장(여러개) : 표현방법 4 : 리터럴방식 배열선언 + 초기값 설정 (가장 많이 사용) </h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    const arr = [100, 200, "javascript"];
+    console.log("08_____________");
+    console.log(arr[0]);
+    console.log(arr[1]);
+    console.log(arr[2]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample08 -->
+            <div id="sample09" class="sample">
+                <h3>09. 배열 : 데이터 저장(여러개) : 표현방법 5 : push() 매서드를 이용한 배열 방법</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+    const arr = [100, 200, "javascript"];
+    arr.push(400);
+    console.log("09_____________");
+    console.log(arr[0]);
+    console.log(arr[1]);
+    console.log(arr[2]);
+    console.log(arr[3]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript<br />
+                            400
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample09 -->
+            <div id="sample10" class="sample">
+                <h3>10. 배열 : 데이터 저장(여러개) : 표현방법 6 : 다차원 배열</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+        const arr = [100, [200, 300, [400, 500, [600]]], ["javascript", "Jquery"]];
+        console.log("10_____________");
+        console.log(arr[0]);
+        console.log(arr[1][0]);
+        console.log(arr[1][1]);
+        console.log(arr[2][0]);
+        console.log(arr[2][1]);
+        console.log(arr[1][2][2][0]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            javascript<br />
+                            Jquery<br />
+                            600
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample10 -->
+            <div id="sample011" class="sample">
+                <h3>11. 배열 : 데이터 저장(여러개) : 표현방법 7 : 배열구조 분해 할당</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, "javascript"];
+const [a, b, c] = arr;
+console.log("11_____________");
+console.log(a);
+console.log(b);
+console.log(c);
+}
+{
+const arr2 = [100, 200, [300, 400]];
+const [a, b, [x, y]] = arr2;
+console.log(a);
+console.log(b);
+console.log(x);
+console.log(y);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript<br />
+                            100<br />
+                            200<br />
+                            300<br />
+                            400
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample11 -->
+            <div id="sample012" class="sample">
+                <h3>12. 배열 : 데이터 저장(여러개) : 표현방법 8 : 배열 펼침 연산자</h3>
+                <p>
+                    자바스크립트에서 변수는 값을 지정하고 참조하는데 사용합니다.
+                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
+                </p>
+                <pre><code>{
+const arr1 = [100, 200, "javascript"];
+const arr2 = [300, 400, "Jquery"];
+const arr3 = [...arr1, 500];
+
+console.log(arr1); // [100, 200, "javascript"]
+console.log(...arr1) // 100200javjascript
+console.log(...arr1, ...arr2); // 100200javascirpt300400jquuery
+console.log(...arr3) // 100200javascirpt500
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100, 200, javascript<br />
+                            100, 200, javascript<br />
+                            100, 200, javascript, 300, 400, Jquery<br />
+                            100, 200, javascript, 500
+                        </div>
+                    </details>
+                </div>
+            </div>
+        </div>
+        <!-- //main__sample containe -->
+    </main>
+    <!-- //main -->
+    <footer id="footer">
+    </footer>
+    <!-- //footer -->
+    <script src="assets/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
+    <script>
+        // 01. 변수 : 데이터 저장
+        {
+            let x = 100;
+            let y = 200;
+            let z = "javascript";
+            console.log(x);
+            console.log(y);
+            console.log(z);
+        }
+        // 02. 변수 : 데이터 저장 + 데이터 변경
+        {
+            let x = 100;
+            let y = 200;
+            let z = "javascript";
+            x = 300;
+            y = 400;
+            z = "Jquery"
+            console.log(x);
+            console.log(y);
+            console.log(z);
+        }
+        // 03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가
+        {
+            let x = 100;
+            let y = 200;
+            let z = "javascript";
+            x += 300;
+            y += 400;
+            z += "Jquery"
+            console.log(x);
+            console.log(y);
+            console.log(z);
+        }
+        // 04. 상수 : 데이터 저장(변경&추가 X)
+        {
+            let x = 100;
+            let y = 200;
+            let z = "javascript";
+            // x += 300;
+            // y += 400;
+            // z += "Jquery"
+            console.log(x);
+            console.log(y);
+            console.log(z);
+        }
+        // 05. 배열 : 데이터 저장(여러개) : 표현방법 1 : 배열선언
+        {
+            const arr = new Array();
+            arr[0] = 100;
+            arr[1] = 200;
+            arr[2] = "javascript";
+            console.log("05_____________");
+            console.log(arr[0]);
+            console.log(arr[1]);
+            console.log(arr[2]);
+        }
+        // 06. 배열 : 데이터 저장(여러개) : 표현방법 2 : 배열선언 + 초기값 설정
+        {
+            const arr = new Array(100, 200, "javascript");
+            console.log("06_____________");
+            console.log(arr[0]);
+            console.log(arr[1]);
+            console.log(arr[2]);
+        }
+        // 07. 배열 : 데이터 저장(여러개) : 표현방법 3 : 리터럴방식 배열선언
+        {
+            const arr = [];
+            arr[0] = 100;
+            arr[1] = 200;
+            arr[2] = "javascript";
+            console.log("07_____________");
+            console.log(arr[0]);
+            console.log(arr[1]);
+            console.log(arr[2]);
+        }
+        // 08. 배열 : 데이터 저장(여러개) : 표현방법 4 : 리터럴방식 배열선언 + 초기값 설정 (가장 많이 사용)
+        {
+            const arr = [100, 200, "javascript"];
+            console.log("08_____________");
+            console.log(arr[0]);
+            console.log(arr[1]);
+            console.log(arr[2]);
+        }
+        // 09. 배열 : 데이터 저장(여러개) : 표현방법 5 : push() 매서드를 이용한 배열 방법
+        {
+            const arr = [100, 200, "javascript"];
+            arr.push(400);
+            console.log("09_____________");
+            console.log(arr[0]);
+            console.log(arr[1]);
+            console.log(arr[2]);
+            console.log(arr[3]);
+        }
+        // 10. 배열 : 데이터 저장(여러개) : 표현방법 6 : 다차원 배열
+        {
+            const arr = [100, [200, 300, [400, 500, [600]]], ["javascript", "Jquery"]];
+            console.log("10_____________");
+            console.log(arr[0]);
+            console.log(arr[1][0]);
+            console.log(arr[1][1]);
+            console.log(arr[2][0]);
+            console.log(arr[2][1]);
+            console.log(arr[1][2][2][0]);
+        }
+        // 11. 배열 : 데이터 저장(여러개) : 표현방법 7 : 배열구조 분해 할당
+        {
+            const arr = [100, 200, "javascript"];
+            const [a, b, c] = arr;
+            console.log("11_____________");
+            console.log(a);
+            console.log(b);
+            console.log(c);
+        }
+        {
+            const arr2 = [100, 200, [300, 400]];
+            const [a, b, [x, y]] = arr2;
+            console.log(a);
+            console.log(b);
+            console.log(x);
+            console.log(y);
+        }
+        // 12. 배열 : 데이터 저장(여러개) : 표현방법 8 : 배열 펼침 연산자
+        {
+            const arr1 = [100, 200, "javascript"];
+            const arr2 = [300, 400, "Jquery"];
+            const arr3 = [...arr1, 500];
+
+            console.log(arr1); // [100, 200, "javascript"]
+            console.log(...arr1) // 100200javjascript
+            console.log(...arr1, ...arr2); // 100200javascirpt300400jquuery
+            console.log(...arr3) // 100200javascirpt500
+        }
+    </script>
 </body>
 
 </html>
