--- a/Javascript/javascript01.html
+++ b/Javascript/javascript01.html
@@ -60,16 +60,12 @@
                 </p>
                 <pre><code>{
     let x = 100;  // let x = 100; : 여기서 let 키워드를 사용하여 변수 x를 선언하고, 100이라는 숫자 값을 할당합니다.
-    let y = 200;
-    let z = "javascript";
-
-    console.log(x);
-    console.log(y);
-    console.log(z);
+    let y = 200;  // let y = 200; : 이 라인에서도 let을 사용해 y라는 변수를 선언하고, 200이라는 숫자 값을 할당합니다
+    let z = "javascript";  // let z = "javascript"; : 이 라인에서는 z라는 변수를 선언하고, "javascript"라는 문자열 값을 할당합니다
+    console.log(x); // console.log() 함수를 사용하여 변수 x의 값을 콘솔에 출력합니다. 이 경우, 100이 출력됩니다.
+    console.log(y); // console.log() 함수를 사용하여 변수 y의 값을 콘솔에 출력합니다. 200이 출력됩니다.
+    console.log(z); // console.log() 함수로 변수 z의 값을 콘솔에 출력합니다. 이 경우 출력되는 값은 "javascript" 문자열입니다.
 }</code></pre>
-                <p>
-                    let x = 100; : 여기서 let 키워드를 사용하여 변수 x를 선언하고, 100이라는 숫자 값을 할당합니다.
-                </p>
                 <div class="reuslt">
                     <details>
                         <summary>결과 확인하기</summary>
@@ -89,17 +85,17 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    let x = 100;
-    let y = 200;
-    let z = "javascript";
+    let x = 100; // let 키워드를 사용하여 x라는 이름의 변수를 선언하고, 그 값을 100으로 초기화합니다.
+    let y = 200;  // 200;: y라는 또 다른 변수를 선언하고 200으로 초기화합니다.
+    let z = "javascript"; // "javascript";: z라는 변수를 선언하고 문자열 "javascript"로 초기화합니다.
 
-    x = 300;
-    y = 400;
-    z = "Jquery"
+    x = 300;  // 300;: 이전에 선언된 x 변수의 값을 300으로 변경합니다.
+    y = 400;  // 400;: 이전에 선언된 y 변수의 값을 400으로 변경합니다.
+    z = "Jquery"  // "Jquery": 이전에 선언된 z 변수의 값을 문자열 "Jquery"로 변경합니다.
 
-    console.log(x);
-    console.log(y);
-    console.log(z);
+    console.log(x);  // 이 명령은 변경된 x 변수의 값을 콘솔에 출력하도록 지시합니다. 여기서 x는 300으로 변경되었으므로 콘솔에는 300이 출력됩니다.
+    console.log(y);  // 변경된 y 변수의 값을 콘솔에 출력합니다. y의 값이 400으로 변경되었으므로 콘솔에는 400이 출력됩니다.
+    console.log(z);  // 마지막으로, 변경된 z 변수의 값을 콘솔에 출력합니다. z는 문자열 "Jquery"로 변경되었으므로 콘솔에는 Jquery가 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -120,17 +116,17 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    let x = 100;
-    let y = 200;
-    let z = "javascript";
+    let x = 100;  // x라는 이름의 변수를 선언하고, 그 초기값으로 100을 할당합니다.
+    let y = 200;  // y라는 이름의 변수를 선언하고, 그 초기값으로 200을 할당합니다.
+    let z = "javascript";  // "javascript"; : z라는 이름의 변수를 선언하고, 그 초기값으로 문자열 "javascript"를 할당합니다.
 
-    x += 300;
-    y += 400;
-    z += "Jquery"
+    x += 300; // x 변수의 현재 값(100)에 300을 더하여, x는 이제 400이 됩니다.
+    y += 400;  // y 변수의 현재 값(200)에 400을 더하여, y는 이제 600이 됩니다.
+    z += "Jquery"  // z 변수의 현재 값에 문자열 "Jquery"를 이어붙여, z는 이제 "javascriptJquery"가 됩니다.
 
-    console.log(x);
-    console.log(y);
-    console.log(z);
+    console.log(x);  // 콘솔에 x 변수의 최종 값을 출력합니다. 따라서, 400이 출력됩니다.
+    console.log(y);  // 콘솔에 y 변수의 최종 값을 출력합니다. 따라서, 600이 출력됩니다.
+    console.log(z);  // 콘솔에 z 변수의 최종 값을 출력합니다. 따라서, "javascriptJquery"가 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -151,17 +147,17 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    let x = 100;
-    let y = 200;
-    let z = "javascript";
+    let x = 100;  // 100; : x라는 이름의 변수를 선언하고, 그 초기값으로 100을 할당합니다.
+    let y = 200;  // 200; : y라는 이름의 변수를 선언하고, 그 초기값으로 200을 할당합니다.
+    let z = "javascript";  // z라는 이름의 변수를 선언하고, 그 초기값으로 문자열 "javascript"를 할당합니다.
 
-    // x += 300;
-    // y += 400;
-    // z += "Jquery"
+    // x += 300;  // 이 줄은 주석 처리되어 있으므로, 코드 실행 시 x 변수의 값에 300을 더하는 연산은 수행되지 않습니다.
+    // y += 400;  // 이 줄도 주석 처리되어 있으므로, 코드 실행 시 y 변수의 값에 400을 더하는 연산은 수행되지 않습니다.
+    // z += "Jquery"  // "Jquery" : 이 줄 또한 주석 처리되어 있으므로, 코드 실행 시 z 변수의 값에 문자열 "Jquery"를 더하는 연산은 수행되지 않습니다.
 
-    console.log(x);
-    console.log(y);
-    console.log(z);
+    console.log(x);  // 콘솔에 x 변수의 값을 출력합니다. 주석 처리된 코드가 실행되지 않으므로, 초기에 할당된 값인 100이 출력됩니다.
+    console.log(y);  // 콘솔에 y 변수의 값을 출력합니다. 마찬가지로, 초기에 할당된 값인 200이 출력됩니다.
+    console.log(z);  // 콘솔에 z 변수의 값을 출력합니다. 초기에 할당된 문자열 값인 "javascript"가 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -182,15 +178,15 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    const arr = new Array();
-    arr[0] = 100;
-    arr[1] = 200;
-    arr[2] = "javascript";
+    const arr = new Array();  //  arr라는 이름의 상수에 새로운 빈 배열을 할당합니다. const 키워드를 사용함으로써 arr의 참조값은 변경될 수 없지만, 배열 내의 요소는 변경될 수 있습니다.
+    arr[0] = 100;  // arr 배열의 첫 번째 요소(인덱스 0)에 숫자 100을 할당합니다.
+    arr[1] = 200;  // arr 배열의 두 번째 요소(인덱스 1)에 숫자 200을 할당합니다.
+    arr[2] = "javascript";  // "javascript"; : arr 배열의 세 번째 요소(인덱스 2)에 문자열 "javascript"를 할당합니다.
 
     console.log("05_____________");
-    console.log(arr[0]);
-    console.log(arr[1]);
-    console.log(arr[2]);
+    console.log(arr[0]);  // 콘솔에 arr 배열의 첫 번째 요소의 값을 출력합니다. 따라서, 100이 출력됩니다.
+    console.log(arr[1]);  // 콘솔에 arr 배열의 두 번째 요소의 값을 출력합니다. 따라서, 200이 출력됩니다.
+    console.log(arr[2]);  // 콘솔에 arr 배열의 세 번째 요소의 값을 출력합니다. 따라서, "javascript"가 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -211,11 +207,11 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    const arr = new Array(100, 200, "javascript");
+    const arr = new Array(100, 200, "javascript");  // arr라는 이름의 상수에 새로운 배열을 할당하며, 이 배열은 세 개의 요소를 갖습니다. 첫 번째 요소로 100, 두 번째 요소로 200, 세 번째 요소로 문자열 "javascript"가 바로 할당됩니다. 
     console.log("06_____________");
-    console.log(arr[0]);
-    console.log(arr[1]);
-    console.log(arr[2]);
+    console.log(arr[0]);  // 콘솔에 arr 배열의 첫 번째 요소의 값을 출력합니다. 배열의 인덱스는 0부터 시작하므로, 여기서는 100이 출력됩니다.
+    console.log(arr[1]);  // 콘솔에 arr 배열의 두 번째 요소의 값을 출력합니다. 이 경우에는 200이 출력됩니다.
+    console.log(arr[2]);  // 콘솔에 arr 배열의 세 번째 요소의 값을 출력합니다. 이 경우에는 "javascript"라는 문자열이 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -236,15 +232,15 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    const arr = [];
-    arr[0] = 100;
-    arr[1] = 200;
-    arr[2] = "javascript";
+    const arr = [];  // arr라는 이름의 상수에 빈 배열을 할당합니다. 이때, 대괄호([])를 사용하여 배열을 생성하는 것은 new Array()를 사용하는 것과 같은 결과를 가져오지만, 더 간결하고 널리 사용되는 방법입니다.
+    arr[0] = 100;  // 100; : arr 배열의 첫 번째 요소(인덱스 0)에 숫자 100을 할당합니다.
+    arr[1] = 200;  // 200; : arr 배열의 두 번째 요소(인덱스 1)에 숫자 200을 할당합니다.
+    arr[2] = "javascript";  // "javascript"; : arr 배열의 세 번째 요소(인덱스 2)에 문자열 "javascript"를 할당합니다.
     
     console.log("07_____________");
-    console.log(arr[0]);
-    console.log(arr[1]);
-    console.log(arr[2]);
+    console.log(arr[0]);  // 콘솔에 arr 배열의 첫 번째 요소의 값을 출력합니다. 따라서, 100이 출력됩니다.
+    console.log(arr[1]);  // 콘솔에 arr 배열의 두 번째 요소의 값을 출력합니다. 따라서, 200이 출력됩니다.
+    console.log(arr[2]);  // 콘솔에 arr 배열의 세 번째 요소의 값을 출력합니다. 따라서, "javascript"라는 문자열이 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -265,11 +261,11 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    const arr = [100, 200, "javascript"];
+    const arr = [100, 200, "javascript"];  // 이 코드는 arr라는 상수를 선언하고, 이 상수에 3개의 요소를 가진 배열을 할당합니다. 배열의 첫 번째 요소로는 숫자 100, 두 번째 요소로는 숫자 200, 세 번째 요소로는 문자열 "javascript"가 할당됩니다.
     console.log("08_____________");
-    console.log(arr[0]);
-    console.log(arr[1]);
-    console.log(arr[2]);
+    console.log(arr[0]);  // 배열 arr의 첫 번째 요소의 값을 콘솔에 출력합니다. 배열의 인덱스는 0부터 시작하므로, 이 경우 100이 출력됩니다.
+    console.log(arr[1]);  // 배열 arr의 두 번째 요소의 값을 콘솔에 출력합니다. 따라서 200이 출력됩니다.
+    console.log(arr[2]);  // 배열 arr의 세 번째 요소의 값을 콘솔에 출력합니다. 이 때 "javascript"라는 문자열이 출력됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -290,13 +286,13 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-    const arr = [100, 200, "javascript"];
-    arr.push(400);
+    const arr = [100, 200, "javascript"];  // 이 코드는 arr라는 상수에 3개의 요소(숫자 100, 숫자 200, 문자열 "javascript")를 가진 배열을 할당합니다.
+    arr.push(400);  // push 메소드를 사용하여 배열 arr의 끝에 숫자 400을 추가합니다. push 메소드는 배열의 마지막에 하나 이상의 요소를 추가하고, 변경된 배열의 길이를 반환합니다.
     console.log("09_____________");
-    console.log(arr[0]);
-    console.log(arr[1]);
-    console.log(arr[2]);
-    console.log(arr[3]);
+    console.log(arr[0]);  // 배열 arr의 첫 번째 요소(숫자 100)를 콘솔에 출력합니다.
+    console.log(arr[1]);  // 배열 arr의 두 번째 요소(숫자 200)를 콘솔에 출력합니다.
+    console.log(arr[2]);  // 배열 arr의 세 번째 요소(문자열 "javascript")를 콘솔에 출력합니다.
+    console.log(arr[3]);  // 배열 arr의 네 번째 요소(추가된 숫자 400)를 콘솔에 출력합니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -318,14 +314,14 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-        const arr = [100, [200, 300, [400, 500, [600]]], ["javascript", "Jquery"]];
+        const arr = [100, [200, 300, [400, 500, [600]]], ["javascript", "Jquery"]];  // [100, [200, 300, [400, 500, [600]]], ["javascript", "Jquery"]]; : 이 코드는 arr라는 상수에 복잡한 중첩 구조를 가진 배열을 할당합니다
         console.log("10_____________");
-        console.log(arr[0]);
-        console.log(arr[1][0]);
-        console.log(arr[1][1]);
-        console.log(arr[2][0]);
-        console.log(arr[2][1]);
-        console.log(arr[1][2][2][0]);
+        console.log(arr[0]);  // 배열 arr의 첫 번째 요소(숫자 100)를 출력합니다.
+        console.log(arr[1][0]);  // 배열 arr의 두 번째 요소(배열 [200, 300, [400, 500, [600]]])의 첫 번째 요소(숫자 200)를 출력합니다.
+        console.log(arr[1][1]);  // 같은 배열의 두 번째 요소(숫자 300)를 출력합니다.
+        console.log(arr[2][0]);  // 배열 arr의 세 번째 요소(배열 ["javascript", "Jquery"])의 첫 번째 요소(문자열 "javascript")를 출력합니다.
+        console.log(arr[2][1]);  // 같은 배열의 두 번째 요소(문자열 "Jquery")를 출력합니다.
+        console.log(arr[1][2][2][0]);  // 여기서는 조금 더 깊은 중첩에 접근합니다. 배열 arr의 두 번째 요소의 세 번째 요소(배열 [400, 500, [600]])의 세 번째 요소(배열 [600])의 첫 번째 요소(숫자 600)를 출력합니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -349,20 +345,20 @@
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-const arr = [100, 200, "javascript"];
-const [a, b, c] = arr;
+const arr = [100, 200, "javascript"];  // 이 코드는 arr이라는 상수에 숫자 100, 숫자 200, 그리고 문자열 "javascript"를 요소로 갖는 배열을 할당합니다.
+const [a, b, c] = arr;  // 이 구문은 배열 arr에서 첫 번째 요소(100), 두 번째 요소(200), 그리고 세 번째 요소("javascript")를 각각 변수 a, b, c에 할당합니다
 console.log("11_____________");
-console.log(a);
-console.log(b);
-console.log(c);
+console.log(a);  // 변수 a의 값인 100을 콘솔에 출력합니다.
+console.log(b);  // 변수 b의 값인 200을 콘솔에 출력합니다.
+console.log(c);  // 변수 c의 값인 "javascript"를 콘솔에 출력합니다.
 }
 {
-const arr2 = [100, 200, [300, 400]];
-const [a, b, [x, y]] = arr2;
-console.log(a);
-console.log(b);
-console.log(x);
-console.log(y);
+const arr2 = [100, 200, [300, 400]];  // [100, 200, [300, 400]]; : arr2라는 상수에 숫자 100, 숫자 200, 그리고 또 다른 배열 [300, 400]을 요소로 가지는 배열을 할당합니다.
+const [a, b, [x, y]] = arr2;  // arr2; : 배열 arr2의 첫 번째 요소와 두 번째 요소는 각각 변수 a와 b에 할당되며, 세 번째 요소(배열 [300, 400])는 추가적인 구조 분해를 통해 그 내부의 요소가 변수 x와 y에 각각 할당됩니다. 따라서 a는 100, b는 200, x는 300, y는 400의 값을 가지게 됩니다.
+console.log(a);  // 콘솔에 변수 a의 값을 차례로 출력합니다. 출력 결과는 100이 됩니다.
+console.log(b);  // 콘솔에 변수 b의 값을 차례로 출력합니다. 출력 결과는 200이 됩니다.
+console.log(x);  // 콘솔에 변수 x의 값을 차례로 출력합니다. 출력 결과는 300이 400이 됩니다.
+console.log(y);  // 콘솔에 변수 y의 값을 차례로 출력합니다. 출력 결과는 400이 됩니다.
 }</code></pre>
                 <div class="reuslt">
                     <details>
@@ -387,9 +383,9 @@ console.log(y);
                     변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
                 </p>
                 <pre><code>{
-const arr1 = [100, 200, "javascript"];
-const arr2 = [300, 400, "Jquery"];
-const arr3 = [...arr1, 500];
+const arr1 = [100, 200, "javascript"];  // 이 코드는 arr1이라는 상수에 숫자 100, 숫자 200, 그리고 문자열 "javascript"를 요소로 갖는 배열을 할당합니다.
+const arr2 = [300, 400, "Jquery"]; // 이 코드는 arr2라는 다른 상수에 숫자 300, 숫자 400, 그리고 문자열 "Jquery"를 요소로 갖는 또 다른 배열을 할당합니다.
+const arr3 = [...arr1, 500]; // 이 구문은 스프레드 연산자 ...를 사용하여 arr1 배열의 모든 요소를 새 배열 arr3로 복사한 다음, 마지막에 숫자 500을 추가합니다. 결과적으로 arr3는 [100, 200, "javascript", 500]의 값을 갖게 됩니다.
 
 console.log(arr1); // [100, 200, "javascript"]
 console.log(...arr1) // 100200javjascript
