--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main__icons">
-        <div class="draggableIcon icon">
+        <div id="myComputerIcon" class="draggableIcon icon">
             <img src="assets/img/face.png" alt="내 컴퓨터">
             <span>내 컴퓨터</span>
         </div>
@@ -24,7 +24,7 @@
     </div>
     <!-- //main__icons -->
 
-    <div class="layer__wrap" style="display: none;">
+    <div class="layer__wrap" id="infoLayer" style="display: none;">
         <div class="layer__inner">
             <div class="layer">
                 <div class="layer__conts">
@@ -53,12 +53,47 @@
 
                         </p>
                     </div>
+                    <div class="skill">
+                        <h3>skill</h3>
+                        <dl>
+                            <dt>html</dt>
+                            <dd>HTML: 웹 페이지의 구조와 콘텐츠를 정의하는 마크업 언어입니다.</dd>
+                            <dt>css</dt>
+                            <dd>CSS: HTML로 작성된 웹 페이지의 스타일, 레이아웃 및 디자인을 지정하는 스타일 시트 언어입니다.</dd>
+                            <dt>javascript</dt>
+                            <dd>JavaScript: 웹 페이지의 동적인 기능을 담당하는 프로그래밍 언어로, 사용자와의 상호작용을 가능하게 합니다.</dd>
+                        </dl>
+                        <dl>
+                            <dt>react</dt>
+                            <dd>React.js: 페이스북에서 개발한 사용자 인터페이스 라이브러리로, UI를 컴포넌트 기반으로 구축하여 개발을 간편하고 효율적으로 만듭니다.</dd>
+                            <dt>node.js</dt>
+                            <dd>Node.js: Chrome V8 JavaScript 엔진으로 빌드된 서버 사이드 JavaScript 런타임 환경으로, 비동기식 이벤트 처리를 통해 높은
+                                성능을 제공합니다.
+                            </dd>
+                            <dt>next.js</dt>
+                            <dd>React 기반의 서버 사이드 렌더링 및 정적 사이트 생성을 지원하는 웹 프레임워크로, React 애플리케이션의 개발과 배포를 단순화합니다.</dd>
+                        </dl>
+                    </div>
+                    <div class="pichure"></div>
                 </div>
                 <div class="layer__footer"></div>
             </div>
         </div>
     </div>
     <!-- //layer__warp -->
+
+    <script>
+        // "내 컴퓨터" 아이콘을 위한 클릭 이벤트 리스너 추가
+        document.getElementById('myComputerIcon').addEventListener('click', function () {
+            let layer = document.getElementById('infoLayer');
+            // 레이어의 현재 표시 상태에 따라 보이거나 숨김 처리
+            if (layer.style.display === "none") {
+                layer.style.display = "block"; // 레이어를 보이게 함
+            } else {
+                layer.style.display = "none"; // 레이어를 숨김
+            }
+        });
+    </script>
 </body>
 
 </html>
