--- a/index.html
+++ b/index.html
@@ -57,24 +57,46 @@
                         <h3>skill</h3>
                         <dl>
                             <dt>html</dt>
-                            <dd>HTML: 웹 페이지의 구조와 콘텐츠를 정의하는 마크업 언어입니다.</dd>
+                            <dd>HTML: 웹 페이지의 구조와 콘텐츠를 효과적으로 구현할 수 있는 능력을 보유하고 있습니다. 다양한 HTML5 태그와 속성을 활용하여 의미론적이고
+                                접근성이 높은 웹사이트를 개발하는 데 익숙합니다</dd>
                             <dt>css</dt>
-                            <dd>CSS: HTML로 작성된 웹 페이지의 스타일, 레이아웃 및 디자인을 지정하는 스타일 시트 언어입니다.</dd>
+                            <dd>CSS: 웹 페이지의 시각적 디자인과 레이아웃을 세련되게 조정할 수 있습니다. Flexbox와 Grid 시스템을 이용한 반응형 웹 디자인을 구현한
+                                경험이 있으며, CSS 애니메이션과 전환을 활용하여 사용자 경험을 향상시키는 데 능숙합니다.</dd>
                             <dt>javascript</dt>
-                            <dd>JavaScript: 웹 페이지의 동적인 기능을 담당하는 프로그래밍 언어로, 사용자와의 상호작용을 가능하게 합니다.</dd>
+                            <dd>JavaScript: 동적 웹 페이지 및 어플리케이션 개발에 있어 깊은 이해도를 보유하고 있습니다. 비동기 프로그래밍, ES6+ 문법, DOM 조작
+                                등을 포함한 고급 개념에 능숙합니다. 대규모 프로젝트에서의 성능 최적화와 디버깅에 경험이 풍부합니다.</dd>
                         </dl>
                         <dl>
                             <dt>react</dt>
-                            <dd>React.js: 페이스북에서 개발한 사용자 인터페이스 라이브러리로, UI를 컴포넌트 기반으로 구축하여 개발을 간편하고 효율적으로 만듭니다.</dd>
-                            <dt>node.js</dt>
-                            <dd>Node.js: Chrome V8 JavaScript 엔진으로 빌드된 서버 사이드 JavaScript 런타임 환경으로, 비동기식 이벤트 처리를 통해 높은
-                                성능을 제공합니다.
+                            <dd>React.js: 컴포넌트 기반 아키텍처를 이해하고 있으며, 대규모 어플리케이션 개발에 React를 활용한 경험이 풍부합니다. React Hooks, 상태
+                                관리 라이브러리(예: Redux) 및 최적화 기술에 능숙합니다.
                             </dd>
+                            <dt>node.js</dt>
+                            <dd>Node.js: 선언적 렌더링과 컴포넌트 시스템을 이용한 인터랙티브한 UI 개발에 경험이 있습니다. Vuex를 활용한 상태 관리와 Vue
+                                Router를 사용한 라우팅에 익숙합니다. </dd>
                             <dt>next.js</dt>
-                            <dd>React 기반의 서버 사이드 렌더링 및 정적 사이트 생성을 지원하는 웹 프레임워크로, React 애플리케이션의 개발과 배포를 단순화합니다.</dd>
+                            <dd>Next.js: 서버 사이드 렌더링(SSR)과 정적 사이트 생성(SSG)에 대한 이해를 바
+                                탕으로 Next.js 프레임워크를 활용한 웹 어플리케이션 개발에 경험이 있습니다. SEO 최적화 및 퍼포먼스 향상을 위한 기술적 전략 구현에 능숙합니다
+                            </dd>
                         </dl>
                     </div>
-                    <div class="pichure"></div>
+                    <div class="picture">
+                        <h3>intro</h3>
+                        <ul>
+                            <li><img src="assets/intro/intro01.jpg" alt="소개1"></li>
+                            <li><img src="assets/intro/intro02.jpg" alt="소개2"></li>
+                            <li><img src="assets/intro/intro03.jpg" alt="소개3"></li>
+                            <li><img src="assets/intro/intro04.jpg" alt="소개4"></li>
+                            <li><img src="assets/intro/intro05.jpg" alt="소개5"></li>
+                            <li><img src="assets/intro/intro06.jpg" alt="소개6"></li>
+                            <li><img src="assets/intro/intro07.jpg" alt="소개7"></li>
+                            <li><img src="assets/intro/intro08.jpg" alt="소개8"></li>
+                            <li><img src="assets/intro/intro09.jpg" alt="소개9"></li>
+                            <li><img src="assets/intro/intro10.jpg" alt="소개10"></li>
+                            <li><img src="assets/intro/intro11.jpg" alt="소개11"></li>
+                            <li><img src="assets/intro/intro12.jpg" alt="소개12"></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="layer__footer"></div>
             </div>
